Add jwt auth and generate token
